fix(multiselect): adjustt filterable input spacing

--- a/packages/carbon-web-components/src/components/multi-select/multi-select.scss
+++ b/packages/carbon-web-components/src/components/multi-select/multi-select.scss
@@ -34,6 +34,7 @@ $css--plex: true !default;
 
   .#{$prefix}--text-input {
     border: none;
+    padding-left: 0;
 
     &:focus {
       outline: none;
